--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tsc-node": "^0.0.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.1",
     "@types/sequelize": "^4.28.20",
